# csp_llm

./: .gitignore  README.md  pyproject.toml
docs/: datasets.md  generation_utils.md  llm_generate.md  make_checkpoint_graphs.md  model.md  tokenizer.md  train.md
src/materium/: datasets.py  generation_utils.py  llm_generate.py  make_checkpoint_graphs.py  model.py  tokenizer.py  tokenizer_bertos.py  train.py  visualize_crystals.py
